Implemented basic SEO

--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+  
+    <title>DormHub | User & Task Management Dashboard</title>
+    <meta name="description" content="Dormhub is a secure, role-based user and task management system built with React and Spring Boot." />
+    <meta name="keywords" content="React, Spring Boot, user management, task management, admin dashboard, student dashboard, frontend backend application" /> <!-- replace with your own comma-separated keywords -->
+    <meta name="author" content="Laksh Anil Budhrani, Kristiana Stover, Jonathan Garcia Arias, Keaton LaBorde" /> 
+  
+    <meta property="og:title" content="DormHub | User and Task Management Dashboard App" />
+    <meta property="og:description" content="Secure, role-based user and task management app built with React and Spring Boot." />
+    <meta property="og:image" content="https://dormhub.netlify.app/og-preview.png" /> <!-- NOTE: Create your own 1200x630 image, save as og-preview.png, and save this in your `public` folder -->
+    <meta property="og:url" content="https://dormhub.netlify.app" />
+    <meta property="og:type" content="website" />
+  
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DormHub | User and Task Management Dashboard" />
+    <meta name="twitter:description" content="Secure, role-based user and task management app built with React and Spring Boot." />
+    <meta name="twitter:image" content="https://dormhub.netlify.app/og-preview.png" /> <!-- uses same og-preview.png image as above -->
+  
+    <!-- favicon "installation" (reflects instructions listed at favicon.io website) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
+    <meta name="google-site-verification" content="CXH3-D1PWuVVkT5hoSNE0BcGlHbEKWAVy1yaICCn3Dg" />
+  
+    <!-- Bootstrap & Popper.js (unchanged from what was added earlier in demo project) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
